[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.0,<1.4"
scikit-learn = ">=1.0"

[tool.poetry.dev-dependencies]
alembic = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
